<resources>
    <string name="app_name">HRMP</string>
    <string name='login_username_hint'>用户名</string>
    <string name="login_psd_hint">密码</string>
    <string name="do_login">登录</string>
    <string name="username_or_psd_is_empty">用户名或密码不能为空</string>
    <string name="app_crash_tip">感谢您发现的错误，我们会尽快改正。程序稍后重启。</string>
    <string name="bottom_bar_enroll">报名</string>
    <string name="bottom_bar_message">消息</string>
    <string name="bottom_bar_info">我</string>
    <string name="hire_number">%s人</string>
    <string name="enroll_detail">招工详情</string>
    <string name="do_enroll">报名</string>
    <string name="do_not_enroll">取消报名</string>
    <string name="wait_for_do_repay">待支付</string>
    <string name="do_login_ing">正在登录...</string>
    <string name="get_version_info">正在获取版本信息</string>

    <!-- 我 -->
    <string name="info">我</string>
    <string name="info_normal_title">常用</string>
    <string name="info_username_title">登录账号：</string>
    <string name="info_modify_password">修改密码</string>
    <string name="info_my_entry">我的报名</string>
    <string name="info_change_username">切换账号</string>
    <string name="info_exit">退出登录</string>

    <!-- 消息详情 -->
    <string name="msg_detail_send_name_title">发送人：</string>
    <string name="msg_detail_send_time_title">发送时间：</string>
    <string name="msg_detail_title_title">标题：</string>
    <string name="msg_detail_content_title">内容：</string>
    <string name="msg_detail_title">消息详情</string>
    <string name="msg_detail_msg_detail_remind">正在获取信息详情，请稍后</string>
    <string name="msg_detail_msg_error">获取消息详情失败</string>

    <!-- 报名基本信息 -->
    <string name="basic_info_send_name_title">发布人：</string>
    <string name="basic_info_state_title">状态：</string>
    <string name="basic_info_title_title">标题：</string>
    <string name="basic_info_company_title">用工单位：</string>
    <string name="basic_info_address_title">工作地点：</string>
    <string name="basic_info_descri_title">工作描述：</string>
    <string name="basic_info_work_type_title">需要工种：</string>
    <string name="basic_info_work_time_title">用工时间：</string>
    <string name="basic_info_work_num_title">招工数量：</string>


    <!-- 报名列表 -->
    <string name="entry_form_time">报名时间</string>
    <string name="entry_form_name">报名人</string>
    <string name="entry_form_num">报名人数</string>
    <!-- 处理记录 -->
    <string name="handle_history_time">处理时间</string>
    <string name="handle_history_name">报名人</string>
    <string name="handle_history_operate">操作</string>
    <string name="handle_history_content">内容</string>

    <string name="dialog_prompt">提示</string>
    <string name="dialog_normal_cancel">取消</string>
    <string name="dialog_normal_ok">确定</string>
    <string name="dialog_is_exit">您是否退出登录？</string>
    <string name="dialog_is_change_username">您是否切换账号？</string>
    <string name="dialog_please_wait">请稍后...</string>
    <string name="dialog_send_pay_request">正在支付</string>


    <!-- 修改密码 -->
    <string name="modify_password">修改密码</string>
    <string name="password_ok">保存</string>
    <string name="modify_password_old">输入旧密码</string>
    <string name="modify_password_new">设定新密码</string>
    <string name="modify_password_comfirm">再次输入新密码</string>
    <string name="wrong_format_pwd">密码格式有误，请重新输入！</string>
    <string name="resetting_pwd">密码正在重置中,请稍等！</string>
    <string name="forgetPsw_pswRulesTips">6-16个数字、字母和符号的组合，必须同时包括字母和数字，不能为中文或全角字符。</string>
    <string name="remind_old_is_empty">请输入旧密码</string>
    <string name="remind_new_is_empty">请输入新密码</string>
    <string name="remind_new_2_is_empty">请再次输入新密码</string>
    <string name="remind_new_is_equals_new2">两次输入的新密码必须相同</string>
    <string name="remind_new_is_equals_old">新密码不能与旧密码相同</string>
    <string name="modify_passwrod_ok">确定修改</string>
    <string name="modify_password_success">密码修改完成请重新登录</string>

    <string name="my_entry_form">我的报名</string>
    <string name="my_entry_form_num">报名人数：</string>
    <string name="my_entry_form_price">报名费：</string>
    <string name="my_entry_form_unit">元/人</string>
    <string name="my_entry_form_commit">支付</string>
    <string name="my_entry_form_sum">总费用：</string>
    <string name="my_entry_form_rmb">元</string>
    <string name="my_entry_form_limit">0123456789</string>
    <string name="my_entry_form_pay_again">继续支付</string>

    <string name="worklist_word">名</string>
    <string name="worklist_desc">描述：</string>
    <string name="worklist_addr">地址：</string>

    <string name="my_entry_cancel">您是否取消报名？</string>

    <string name="weixin_pay_errcode_success">支付成功</string>
    <string name="weixin_pay_errcode_cancel">您已经取消了支付</string>
    <string name="weixin_pay_errcode_deny">支付被拒绝</string>
    <string name="weixin_pay_errcode_unsupported">不支持错误</string>
    <string name="weixin_pay_errcode_unknown">请求发挥</string>
    <string name="weixin_pay_order">支付订单</string>
    <string name="weixin_pay_do_repay">立即支付</string>
    <string name="weixin_pay_order_desc">订单详情:</string>
    <string name="weixin_pay_order_money">订单金额:</string>
    <string name="weixin_pay_choice_pay">选择支付方式</string>
    <string name="weixin_pay_repay">微信支付</string>
    <string name="weixin_pay_repay_desc">亿万用户的选择，更快更安全</string>
    <string name="weixin_pay_repay_zero">支付金额不能为0</string>
    <string name="pay_result_title_bar">支付结果</string>
    <string name="pay_result_back">返回</string>

    <!-- 取消报名 -->
    <string name="is_cancel_sign">是否取消当前报名？</string>
    <string name="cancel_sign_success">取消报名成功</string>
    <string name="cancel_sign_fail">取消报名失败</string>
    <string name="cancel_sign_ing">正在取消报名，请稍后...</string>
    <string name="request_sign_ing">正在提交申请，请稍后...</string>

    <!-- 版本更新 -->

    <string name="update_version_button_complete">安装</string>
    <string name="update_version_button_error">更新出错</string>
    <string name="update_version_button_start">开始更新</string>

    <!-- 权限 -->
    <string name="permission_reminder">请设置允许开通【存储】权限,否则应用可能无法正常运行</string>
    <string name="permission_open">开通</string>
    <string name="permission_cancel">取消</string>
    <string name="permission_do_open">去开通</string>
</resources>
