<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/ll_entry_form_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entry_form_time"
                android:textColor="@color/info_common_text_color"
                android:textSize="14sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entry_form_name"
                android:textColor="@color/info_common_text_color"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entry_form_num"
                android:textColor="@color/info_common_text_color"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>


    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/entry_form_pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
