<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayout1"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:background="@drawable/shape_dialog_bg"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dialog_normal_title"
        style="@style/dialog_normal_title"
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/dialog_prompt"></TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/dialog_line"></View>

    <TextView
        android:id="@+id/tv_dialog_normal_tips"
        style="@style/dialog_normal_content"
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:gravity="center"
        android:text=""></TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/dialog_line"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/btn_dialog_normal_cancel"
            style="@style/dialog_normal_cancel_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_button"
            android:gravity="center"
            android:text="@string/dialog_normal_cancel"></TextView>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:background="@color/dialog_line"></View>

        <TextView
            android:id="@+id/btn_dialog_normal_ok"
            style="@style/dialog_normal_ok_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/selector_dialog_button"
            android:gravity="center"
            android:text="@string/dialog_normal_ok"></TextView>
    </LinearLayout>

</LinearLayout>